--- a/gtk-3.0/widgets/separator.css
+++ b/gtk-3.0/widgets/separator.css
@@ -4,7 +4,8 @@
  
 .sidebar.view.separator,
 .view.separator,
-.separator {
+.separator,
+.sidebar .view.separator {
     border-width: 1px;
     border-style: solid;
     border-color: shade(@theme_bg_color, 0.9);
