--- a/gtk-3.0/widgets/toolbar.css
+++ b/gtk-3.0/widgets/toolbar.css
@@ -79,8 +79,7 @@ GthEmbeddedDialog .button:active:focus {
 }
 
 .primary-toolbar .raised .button:active,
-.primary-toolbar .raised.button:active,
-{
+.primary-toolbar .raised.button:active {
     transition: 200ms linear;
     border-radius: 0px;
     border-color: shade(@toolbar_bg_color, 0.75);
